[package]
name = "routerify-ws"
version = "3.0.0"
description = "The websocket support for the Routerify library."
homepage = "https://github.com/nikosefthias/routerify-ws"
repository = "https://github.com/nikosefthias/routerify-ws"
keywords = ["routerify", "hyper-rs", "hyper", "websocket", "ws"]
categories = ["asynchronous", "web-programming", "web-programming::websocket"]
authors = ["Nikos Efthias <nikos@mugsoft.io>","Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = []
all = ["json"]
json = ["serde", "serde_json"]

[dependencies]
log = "0.4.14"
derive_more = "0.99.17"
routerify = "3.0.0"
hyper = "0.14.16"
headers = "0.3.5"
tokio-tungstenite = { version = "0.16.1", default-features = false }
futures = { version = "0.3.19", default-features = false }
tokio = { version = "1.15.0", features = ["full"] }

serde = { version = "1.0.132", optional = true }
serde_json = { version = "1.0.73", optional = true }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }
tokio-tungstenite = { version = "0.16.1", features = ["rustls"] }
